<resources>
 <string name="app_name">Com!</string>
</resources>
